tests/snapshots/miners/update_addresses/four_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - miners
    - update-addresses
    - 1FsroWmeJPBhcPiUr37pWXdojRBe6jdey9uukEXk1TheA
    - 1CQvSXsmM5BMFKguKDPpNUfw1idiut8UifLtT8748JdHc
    - 193maApeJWrz9GFwWCfa982ccLARVE9Y1WgKSJaUs7UAx
    - 16fZKYPCZJv2TP3FArA9FLUQceTS9U8xVnSjxFG9MBKyY
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
