tests/snapshots/miners/update_addresses/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - miners
    - update-addresses
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Wrong number of addresses, expected 4, got 0
