tests/snapshots/miners/update_addresses/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - update-addresses
    - 1FsroWmeJPBhcPiUr37pWXdojRBe6jdey9uukEXk1TheA
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Wrong number of addresses, expected 4, got 1
